--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,6 +7,8 @@
     "noEmit": true,
     "skipLibCheck": true,
     "strict": true,
-    "verbatimModuleSyntax": true
+    "verbatimModuleSyntax": true,
+    "target": "es2015",
+    "lib": ["dom", "dom.iterable", "esnext"]
   }
 }
